# opam2nix

./: .gitignore  CHANGELOG.md  LICENCE  README.md  _tags  all.gup  bin.gup  blog.md  blog_a.py  build-nix.sh  clean.gup  default.nix  dune  dune-project  flake.nix  jbuild-ignore  jbuild-workspace  local.gup  opam2nix.opam  shell.nix  test.gup  version.full.gup
doc/: future-thoughts.md
examples/: .gitignore  README.md  all.gup  opam2nix.nix
examples/custom-opam-deps/: Makefile  hello.install  hello.opam
examples/custom-opam-deps/nix/: default.nix  multi.nix  opam-selection.nix
examples/custom-opam-deps/src/: dune  main.ml
examples/dev-dependencies/: Makefile  default.nix  dune-project  hello.opam
examples/dev-dependencies/nix/: default.nix  opam-selection.nix
examples/dev-dependencies/src/: main.ml
examples/extract/: extract_direct.json  extract_solve.json  extract_src.json
examples/opam-dependencies/: Makefile  _tags
examples/opam-dependencies/nix/: default.nix
examples/opam-dependencies/src/: dune
examples/opam-library/: default.nix
examples/package/: .gitignore  build.sh  generic.nix
examples/simple/: Makefile  hello.opam  opam-packages.nix  result  shell.nix
examples/simple/nix/: default.nix  opam-selection.nix
examples/simple/src/: dune
gup/: Gupfile  bin.gup  ocamlbuild
gup/_build/default/src/: version.ml.gup
gup/nix/: src.json.gup
nix/: api.nix  aspcud.nix  basedir.nix  clasp.nix  cohttp.nix  conduit.nix  cudf.nix  default.nix  dose.nix  dose3.nix  dune.nix  extlib.nix  gringo.nix  gringo.patch  gup.nix  local.nix  local.tgz.gup  mccs.nix  mirage-clock-unix.nix  mirage-profile.nix  mirage-types.nix  ocaml_dns.nix  ocamlgraph.nix  opam-client-minimal.sh  opam-file-format.nix  opam-lib.nix  opam-url-fix.diff  opam.nix  opam2nix.nix  pcap-format.nix  sources.json  sources.nix  src.in.json  src.json  tcpip.nix  wrangle.json
nix/dose/: compilation.diff
nix/overrides/: default.nix  path-hooks.sh
nix/overrides/ctypes/: install-headers-once.patch
nix/overrides/ocaml/: default.nix
nix/overrides/ocamlfind/: default.nix
nix/overrides/ocb-stubblr/: disable-opam.diff
nix/overrides/zarith-xen/: install.sh
nix/patches/: 0001-OpamFilter-handle-converted-variables-correctly-when.patch
src/: .stamp.gup  cmd.ml  digest_cache.ml  digest_cache.mli  download.ml  download.mli  dune  extract.ml  extract.mli  file_cache.ml  generate.ml  hex.ml  hex.mli  invoke.ml  jbuild  legacy_packages.ml  lwt_ext.ml  main.ml  main.mli  nix_expr.ml  nix_expr.mli  opamAction.ml  opamClientConfig.ml  opam_metadata.ml  opam_metadata.mli  option.ml  repo.ml  repo.mli  result.ml  select.ml  select.mli  seq_ext.ml  solve.ml  solver.ml  solver.mli  solver_env.ml  util.ml  vars.ml  vars.mli  version_ml.ml
src/nix/: default.nix  opambuilder.nix  package_map.nix
src/nix/overrides/: default.nix
src/nix/overrides/ocamlfind/: default.nix
test_src/: dune  jbuild  test.ml  test_repo.ml  test_util.ml  test_vars.ml
var_test/: env.json  opamEnv  pkg-test.opam  run.sh  vars.opam
