; vim: set syntax=lisp commentstring=;\ %s:

(library
 (name opam2nix)
 (public_name opam2nix)
 (modules :standard \ main)
 (libraries str unix yojson
   opam-solver opam-state
   lwt lwt.unix curl curl.lwt
   fileutils))

(executable
 (name main)
 (modules main)
 (public_name opam2nix)
 (libraries opam2nix))

(rule
 (targets version.ml)
 (deps (universe))
 (action
  (run gup -u %{targets})))
