opam-version: "2.0"
maintainer: "me@example.com"
synopsis: "test package"
# See https://opam.ocaml.org/doc/Manual.html#opamvar-opam-version
# The colons ensure all lines are written to `%{share}%/vars` and also to stdout
install: [
  [ "bash" "-euc" "export PS4=''; exec 2> %{share}%/var-dump; set -x;
: switch: %{switch}%
: prefix: %{prefix}%
: lib: %{lib}%
: bin: %{bin}%
: sbin: %{sbin}%
: share: %{share}%
: doc: %{doc}%
: etc: %{etc}%
: man: %{man}%
: toplevel: %{toplevel}%
: stublibs: %{stublibs}%
: user: %{user}%
: group: %{group}%
: opam-version: %{opam-version}%
: root: %{root}%
: jobs: %{jobs}%
: make: %{make}%
: arch: %{arch}%
: os: %{os}%
: os-distribution: %{os-distribution}%
: os-family: %{os-family}%
: os-version: %{os-version}%
:
: bin: %{bin}% -- %{vars:bin}% -- %{_:bin}%
: build: %{build}% -- %{vars:build}% -- %{_:build}%
: build-id: %{build-id}% -- %{vars:build-id}% -- %{_:build-id}%
: depends: %{depends}% -- %{vars:depends}% -- %{_:depends}%
: dev: %{dev}% -- %{vars:dev}% -- %{_:dev}%
: doc: %{doc}% -- %{vars:doc}% -- %{_:doc}%
: enable: %{enable}% -- %{vars:enable}% -- %{_:enable}%
: etc: %{etc}% -- %{vars:etc}% -- %{_:etc}%
: hash: %{hash}% -- %{vars:hash}% -- %{_:hash}%
: installed: %{installed}% -- %{vars:installed}% -- %{_:installed}%
: lib: %{lib}% -- %{vars:lib}% -- %{_:lib}%
: man: %{man}% -- %{vars:man}% -- %{_:man}%
: name: %{name}% -- %{vars:name}% -- %{_:name}%
: pinned: %{pinned}% -- %{vars:pinned}% -- %{_:pinned}%
: sbin: %{sbin}% -- %{vars:sbin}% -- %{_:sbin}%
: share: %{share}% -- %{vars:share}% -- %{_:share}%
: stublibs: %{stublibs}% -- %{vars:stublibs}% -- %{_:stublibs}%
: toplevel: %{toplevel}% -- %{vars:toplevel}% -- %{_:toplevel}%
: version: %{version}% -- %{vars:version}% -- %{_:version}%
: with-build: %{with-build}% -- %{vars:with-build}% -- %{_:with-build}%
: with-doc: %{with-doc}% -- %{vars:with-doc}% -- %{_:with-doc}%
: with-test: %{with-test}% -- %{vars:with-test}% -- %{_:with-test}%
:
: ocamlfind:build-id: %{ocamlfind:build-id}%
: ocamlfind:depends: %{ocamlfind:depends}%
: ocamlfind:dev: %{ocamlfind:dev}%
: ocamlfind:enable: %{ocamlfind:enable}%
: ocamlfind:hash: %{ocamlfind:hash}%
: ocamlfind:installed: %{ocamlfind:installed}%
: ocamlfind:name: %{ocamlfind:name}%
: ocamlfind:pinned: %{ocamlfind:pinned}%
: ocamlfind:version: %{ocamlfind:version}%
: ocamlfind:with-build: %{ocamlfind:with-build}%
: ocamlfind:with-doc: %{ocamlfind:with-doc}%
: ocamlfind:with-test: %{ocamlfind:with-test}%
"]
]

